--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="text_spacing_small">8dp</dimen>
     <dimen name="text_spacing_medium">16dp</dimen>
+
+    <dimen name="header_height">90dp</dimen>
+    <dimen name="orders_card_width">300dp</dimen>
+
 </resources>
