--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,7 +33,7 @@
     <dimen name="drawer_icon_size">22dp</dimen>
     <dimen name="drawer_divider_inset">56dp</dimen>
     <dimen name="hairline">0.5dp</dimen>
-
+    <dimen name="myOrders_card_height">260dp</dimen>
     <dimen name="myOrders_card_width">320dp</dimen>
     <dimen name="orders_carousel_height">300dp</dimen>
 
